--- a/cmt/Makefile.RootCore
+++ b/cmt/Makefile.RootCore
@@ -28,7 +28,7 @@ PACKAGE_BINFLAGS     =
 PACKAGE_LIBFLAGS     = 
 
 # the list of packages we depend on:
-PACKAGE_DEP          =  xAODBase xAODEventInfo GoodRunsLists JetMomentTools CPAnalysisExamples xAODTracking xAODJet TrigDecisionTool TrigConfxAOD IsolationSelection ElectronPhotonSelectorTools xAODCutFlow TrackVertexAssociationTool InDetTrackSelectionTool
+PACKAGE_DEP          =  xAODBase xAODEventInfo GoodRunsLists JetMomentTools CPAnalysisExamples xAODTracking xAODJet TrigDecisionTool TrigConfxAOD IsolationSelection ElectronPhotonSelectorTools xAODCutFlow TrackVertexAssociationTool InDetTrackSelectionTool JetSelectorTools
 
 # the list of packages we use if present, but that we can work without :
 PACKAGE_TRYDEP       = 
