--- a/data/upsilon.conf
+++ b/data/upsilon.conf
@@ -15,16 +15,16 @@ Ele.fallbackEt: 300000.
 Ele.FallbackId: MediumLLH
 #
 MuonBaseline.Pt: 1000.
-MuonBaseline.Id: 0 # Medium
+MuonBaseline.Id: 2 # Loose
 #
 Muon.Pt: 1000.
 Muon.Eta: 2.3
-Muon.Id: 0 # Loose
+Muon.Id: 2 # Loose
 Muon.Iso: LooseTrackOnly
 Muon.d0sig: 3.
 Muon.z0: 0.5
 #
-MuonCosmic.z0: 5.
+MuonCosmic.z0: 10.
 MuonCosmic.d0: 1.0
 #
 BadMuon.qoverp: 0.2
