--- a/data/gamma_jet.conf
+++ b/data/gamma_jet.conf
@@ -1,14 +1,14 @@
 ##################################################
 # SUSYTools configuration file
 ##################################################
-EleBaseline.Pt: 7000.
-EleBaseline.Id: LooseAndBLayerLLH
+EleBaseline.Pt: 25000.
+EleBaseline.Id: MediumLLH 
 EleBaseline.CrackVeto: false
 #
-Ele.Et: 7000.
+Ele.Et: 25000.
 Ele.Eta: 2.47
 Ele.Iso: LooseTrackOnly
-Ele.Id: LooseAndBLayerLLH
+Ele.Id: MediumLLH
 Ele.d0sig: 5.
 Ele.z0: 0.5
 Ele.fallbackEt: 300000.
@@ -17,7 +17,7 @@ Ele.FallbackId: MediumLLH
 MuonBaseline.Pt: 1000.
 MuonBaseline.Id: 2 # Loose
 #
-Muon.Pt: 1000.
+Muon.Pt: 2000.
 Muon.Eta: 2.3
 Muon.Id: 2 # Loose
 Muon.Iso: LooseTrackOnly
@@ -29,10 +29,11 @@ MuonCosmic.d0: 1.0
 #
 BadMuon.qoverp: 0.2
 #
-PhotonBaseline.Pt: 100000.
+PhotonBaseline.Pt: 25000.
+PhotonBaseline.Eta: 2.37
 #
-Photon.Pt: 100000.
-Photon.Eta: 2.37
+Photon.Pt: 25000.
+Photon.Eta: 1.37
 Photon.Id: Tight
 Photon.Iso: FixedCutTight
 #
@@ -48,6 +49,10 @@ Jet.JVT_WP: Medium
 #
 #BadJet.Jvt: 0.64
 BadJet.Cut: LooseBad
+
+#
+#master switch for btagging use in ST. If false, btagging is not used neither for jets decorations nor for OR (regardless of the options below)
+Btag.enable: false
 #
 Btag.Tagger: MV2c10
 Btag.WP: FixedCutBEff_77
