--- a/data/gamma_jet.conf
+++ b/data/gamma_jet.conf
@@ -60,6 +60,7 @@ Btag.WP: FixedCutBEff_77
 Btag.CalibPath: xAODBTaggingEfficiency/13TeV/2016-20_7-13TeV-MC15-CDI-June27_v1.root
 #
 SigLep.RequireIso: 0  # no isolation
+SigLepPh.IsoCloseByOR: 0
 #
 OR.DoBoostedLeptonDR: false
 OR.BoostedLeptonDRC1: -999 # set to positive number to override tool default
