add GRL option, use ID track for upsilon, no m4l cut and charge cut in minitree

--- a/data/upsilon.conf
+++ b/data/upsilon.conf
@@ -19,10 +19,10 @@ MuonBaseline.Id: 2 # Loose
 #
 Muon.Pt: 1000.
 Muon.Eta: 2.7
-Muon.Id: 2 # Loose
+Muon.Id: 2 # veryLoose
 Muon.Iso: LooseTrackOnly
-Muon.d0sig: 3.
-Muon.z0: 0.5
+Muon.d0sig: 6.
+Muon.z0: 1.0
 #
 MuonCosmic.z0: 10.
 MuonCosmic.d0: 1.0
